Adding Global Monitoring App

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ Thumbs.db
 ehthumbs.db
 [Dd]esktop.ini
 $RECYCLE.BIN/
+
+# Ignore below project files
+#force-app/main/default/networkBranding/
+#$force-app/main/default/networks/
+force-app/main/default/profiles/
+force-app/main/default/settings/
+#force-app/main/default/siteDotComSites/
+#force-app/main/default/sites/
