--- a/.forceignore
+++ b/.forceignore
@@ -4,6 +4,12 @@
 
 package.xml
 
+# app switcher
+AppSwitcher.appMenu
+
+#ignore profiles
+**profiles
+
 # LWC configuration files
 **/jsconfig.json
 **/.eslintrc.json
