--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "**/bower_components": true,
     "**/.sfdx": true
   },
-  "eslint.nodePath": "/Users/dfleminks/.vscode/extensions/salesforce.salesforcedx-vscode-lwc-46.16.0/node_modules"
+  "eslint.nodePath": "/Users/tbirke/.vscode/extensions/salesforce.salesforcedx-vscode-lwc-46.2.0/node_modules"
 }
