--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,10 @@ $RECYCLE.BIN/
 # Ignore below project files
 #force-app/main/default/networkBranding/
 #$force-app/main/default/networks/
-#force-app/main/default/profiles
+force-app/main/default/profiles
 force-app/main/default/settings/
 #force-app/main/default/siteDotComSites/
 #force-app/main/default/sites/
+
+#do not ignore the *Partners profile
+!force-app/main/default/profiles/*Partners.profile-meta.xml
