--- a/.forceignore
+++ b/.forceignore
@@ -9,6 +9,8 @@ AppSwitcher.appMenu
 
 #ignore profiles
 #**profiles
+force-app/main/default/roles/Demo.role-meta.xml
+force-app/main/default/profiles/Admin.profile-meta.xml
 
 # LWC configuration files
 **/jsconfig.json
