T6b - styled other feed elements

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -7,6 +7,9 @@
             ],
             "c/feedItemRegular": [
                 "feedItemRegular/feedItemRegular.js"
+            ],
+            "c/vwButton": [
+                "vwButton/vwButton.js"
             ]
         },
         "experimentalDecorators": true
