changed Navi App to id buzz design

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -4,9 +4,11 @@
   "features": ["Communities"],
   "language": "en_US",
   "settings": {
-    "orgPreferenceSettings": {
-      "networksEnabled": true,
-      "s1DesktopEnabled": true
+    "communitiesSettings": {
+        "enableNetworksEnabled": true
+    },
+    "lightningExperienceSettings": {
+        "enableS1DesktopEnabled": true
     }
   }
 }
