--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,4 @@
     "**/bower_components": true,
     "**/.sfdx": true
   },
-  "eslint.nodePath": "/Users/tbirke/.vscode/extensions/salesforce.salesforcedx-vscode-lwc-47.9.0/node_modules"}
+  "eslint.nodePath": "/Users/dfleminks/.vscode/extensions/salesforce.salesforcedx-vscode-lwc-47.10.0/node_modules"}
