Created IoT component

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -28,9 +28,12 @@
             ],
             "c/vwSvgLogo": [
                 "vwSvgLogo/vwSvgLogo.js"
+            ],
+            "c/afdeviceIOT": [
+                "afDeviceIOT/afDeviceIOT.js"
             ]
         },
-        "experimentalDecorators": true
+        "experimeafDeviceIOT/afDeviceIOT.js
     },
     "include": [
         "**/*",
