Fix perm issues

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -29,6 +29,9 @@
             ],
             "c/vwSvgLogo": [
                 "vwSvgLogo/vwSvgLogo.js"
+            ],
+            "c/afDemoManager": [
+                "afDemoManager/afDemoManager.js"
             ]
         }
     },
