--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -32,6 +32,9 @@
             ],
             "c/afDemoManager": [
                 "afDemoManager/afDemoManager.js"
+            ],
+            "c/afHomeButton": [
+                "afHomeButton/afHomeButton.js"
             ]
         }
     },
