Imporved test drive booking

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -35,6 +35,9 @@
             ],
             "c/afHomeButton": [
                 "afHomeButton/afHomeButton.js"
+            ],
+            "c/afVehicleImage": [
+                "afVehicleImage/afVehicleImage.js"
             ]
         }
     },
