Added refresh button

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -38,6 +38,9 @@
             ],
             "c/afVehicleImage": [
                 "afVehicleImage/afVehicleImage.js"
+            ],
+            "c/afRefreshButton": [
+                "afRefreshButton/afRefreshButton.js"
             ]
         }
     },
