--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -52,5 +52,10 @@
         "include": [
             "jest"
         ]
+    },
+    "paths": {
+        "c/*": [
+            "*"
+        ]
     }
 }
